--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
+  <head title="Scott Bast">
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-    Hello my name is Scott.
+    <h1>
+      Hello, Code School!
+    </h1>
+    <ul>
+      <li>Hard Worker</li>
+      <li>Good Father</li>
+    </ul>
+
   </body>
 </html>
